--- a/project/package.json
+++ b/project/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "vite-react-typescript-starter",
   "private": true,
@@ -33,4 +32,12 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
+  {
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
+}
 }
